docs: update docs to recent changes
