# start/routes.ts
@@ -7,8 +7,8 @@ const SksUsersController = () => import('#controllers/sks_users_controller')
 
 router
   .group(() => {
-    router.get('/meals/current', [MealsController, 'current'])
     router.get('/meals', [MealsController, 'index'])
+    router.get('/meals/current', [MealsController, 'current'])
     router.get('/sks-users/current', [SksUsersController, 'latest'])
     router.get('/sks-users/today', [SksUsersController, 'today'])
 
